# model

./: .buildinfo  .gitignore  README.MD  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/examples/: elettra-00.doctree  elettra-01.doctree  elettra-02.doctree  elettra-03.doctree  elettra-04.doctree  elettra-05.doctree  elettra-06.doctree  elettra-07.doctree  elettra-08.doctree  elettra-09.doctree  elettra-10.doctree  elettra-11.doctree  elettra-12.doctree  elettra-13.doctree  elettra-14.doctree  elettra-15.doctree  elettra-16.doctree  elettra-17.doctree  elettra-18.doctree  elettra-19.doctree  elettra-20.doctree  elettra-21.doctree  elettra-22.doctree  elettra-23.doctree  elettra-24.doctree  elettra-25.doctree  elettra-26.doctree  elettra-27.doctree  elettra-28.doctree  elettra-29.doctree  elettra-30.doctree  elettra-31.doctree  elettra-32.doctree  elettra-33.doctree  elettra-34.doctree  (+70 more)
_modules/: index.html
_sources/: index.rst.txt
config/: binary.twiss  final.ele  final.tfs  final.twiss  fodo-nm.yaml  fodo-tm.yaml  fodo.yaml  initial.lte  optimize.ele  optimize.lte  optimize.twiss  skif.lte  vepp4m.lte
examples/: elettra-00.html  elettra-01.html  elettra-01.ipynb  elettra-02.html  elettra-03.html  elettra-04.html  elettra-05.html  elettra-06.html  elettra-06.ipynb  elettra-07.html  elettra-07.ipynb  elettra-08.html  elettra-08.ipynb  elettra-09.html  elettra-09.ipynb  elettra-10.html  elettra-11.html  elettra-11.ipynb  elettra-12.html  elettra-13.html  elettra-13.ipynb  elettra-14.html  elettra-14.ipynb  elettra-15.html  elettra-15.ipynb  elettra-16.html  elettra-16.ipynb  elettra-17.html  elettra-17.ipynb  elettra-18.html  elettra-18.ipynb  elettra-19.html  elettra-19.ipynb  elettra-20.html  elettra-21.html  elettra-22.html  elettra-22.ipynb  elettra-23.html  elettra-24.html  elettra-24.ipynb  (+99 more)
model/: __init__.py  build.py  external.py  model.py  types.py  util.py
modules/: build.html  external.html  model.html  transformations.html  util.html
(+188 files in other folders)
